[project]
name = "laniakea-spark"
description = "Generic distributed job runner for Laniakea."
authors = [
    "Matthias Klumpp <matthias@tenstral.net>"
]
license = "LGPL-3.0-or-later"
readme = "README.md"
python = "^3.9"
homepage = "https://github.com/lkhq/laniakea-spark"
repository = "https://github.com/lkhq/laniakea-spark"

[tool.pylint.master]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    'C', 'R',
    'fixme',
    'unused-argument',
    'global-statement',
    'logging-format-interpolation',
    'attribute-defined-outside-init',
    'protected-access',
    'broad-except',
    'redefined-builtin',
]

[tool.pylint.reports]
score = 'no'

[tool.pylint.typecheck]
ignored-modules = [
    'zmq',
]

[tool.isort]
py_version = 39
profile = "black"
multi_line_output = 3
skip_gitignore = true
length_sort = true
atomic = true

[tool.black]
target-version = ['py39']
line-length = 100
skip-string-normalization = true
