[project]
name = "laniakea-spark"
description = "Generic distributed job runner for Laniakea."
authors = [
    {name = "Matthias Klumpp", email = "matthias@tenstral.net"},
]
license = {text="LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11"
dynamic = ['version']
dependencies = [
    "tomlkit>=0.8",
    "pyzmq>=16",
    "python-debian>=0.1.28",
    "firehose>=0.5",
    "pkgconfig",
]
keywords = ["laniakea", "job-runner", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Documentation = "https://laniakea-hq.rtfd.io"
Source = "https://github.com/lkhq/laniakea-spark"
Homepage = "https://laniakea-hq.rtfd.io"

[project.scripts]
lk-spark = "spark.cli:daemon"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "spark"

[tool.pylint.master]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    'C', 'R',
    'fixme',
    'unused-argument',
    'global-statement',
    'logging-format-interpolation',
    'attribute-defined-outside-init',
    'protected-access',
    'broad-except',
    'redefined-builtin',
]

[tool.pylint.reports]
score = 'no'

[tool.pylint.typecheck]
ignored-modules = [
    'zmq',
]

[tool.isort]
py_version = 39
profile = "black"
multi_line_output = 3
skip_gitignore = true
length_sort = true
atomic = true

[tool.black]
target-version = ['py39']
line-length = 100
skip-string-normalization = true
